Minor fixes to the bottom page

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
         <div class="contact-me">
             <h2>Get In Touch</h2>
-            <h3>If you're looking for a new website or automation solutions.</h3>
-            <p>Reach me and let's talk about building them!</p>
+            <p>Let't talk about web apps or automation solutions.<p>
+            <!-- <p>Reach me and let's talk about building them!</p> -->
             <a class="btn" href="mailto:tiagosl+pws@email.com">CONTACT ME</a>
         </div>
     </div>
